--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
-name: imba_calendar
-description: A Flutter Calendar
-version: 0.0.3
-homepage: https://github.com/caesar-feng/FlutterCalendar
+name: smart_calendar
+description: a smart calendar widget for flutter
+version: 0.0.1
+author: kongpf8848 <kongpf8848@gmail.com>
+homepage: https://github.com/kongpf8848/FlutterCalendar
+
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
 
 dependencies:
   flutter:
